Out of edit mode, Texture Space is behaving like BoundBox #66672

Closed
opened 2019-07-10 18:29:23 +02:00 by Germano Cavalcante · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13570 Core Profile Context 19.7.1 26.20.13001.9005

Blender Version
Broken: version: 2.80 (sub 74), 2019-07-10
Worked: before 15dd289992

Short description of error
When a mesh has modifiers, they affect the Texture Space.
Originally the Texture Space depended only on Mesh in Edit Mode.

Exact steps for others to reproduce the error
Open the attached file and compare the Texture Space in and out of edit mode.

TexSpaceBug.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13570 Core Profile Context 19.7.1 26.20.13001.9005 **Blender Version** Broken: version: 2.80 (sub 74), 2019-07-10 Worked: before 15dd289992 **Short description of error** When a mesh has modifiers, they affect the Texture Space. Originally the Texture Space depended only on Mesh in Edit Mode. **Exact steps for others to reproduce the error** Open the attached file and compare the Texture Space in and out of edit mode. [TexSpaceBug.blend](https://archive.blender.org/developer/F7583501/TexSpaceBug.blend)
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#66693 was marked as duplicate of this issue

#66693 was marked as duplicate of this issue
Sergey Sharybin was assigned by Germano Cavalcante 2019-07-10 18:29:47 +02:00
Sergey Sharybin removed their assignment 2019-07-10 18:38:14 +02:00
Brecht Van Lommel was assigned by Sergey Sharybin 2019-07-10 18:38:14 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

As mentioned in blender.chat this is caused by 15dd289992.

@brecht, i've got a feeling it is more efficient if you have a look.

As mentioned in blender.chat this is caused by 15dd289992. @brecht, i've got a feeling it is more efficient if you have a look.
Member

Added subscribers: @VilemDuha, @lichtwerk

Added subscribers: @VilemDuha, @lichtwerk

This issue was referenced by 8a1552545a

This issue was referenced by 8a1552545a6274d2ff201e0f98067199cbd47cc2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66672
No description provided.